# SimplePaymentEngine

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
benches/: engine_bench.rs
src/: error.rs  lib.rs  main.rs  tests.rs  types.rs
src/aggregator/: event.rs  metrics.rs  mod.rs  sink.rs
src/engine/: processor.rs  validator.rs
src/io/: csv_sink.rs  csv_source.rs  mod.rs  sink.rs  source.rs
src/model/: account.rs  transaction.rs
src/repository/: in_memory.rs  mod.rs
tests/fixtures/: chargeback_scenario.csv  dispute_flow.csv  disputes.csv  edge_cases.csv
