[package]
name = "SimplePaymentEngine"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Mohamed Kamal"]
edition = "2021"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-str"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

# bench profile inherits from release; we add LTO for production-realistic numbers
[profile.bench]
lto = "thin"

[profile.release]
lto = "thin"
